arena vs computer done need to improve